Apply Orders Get
